--- a/src/js/index.html
+++ b/src/js/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/babel" src="scripts/app.js"></script>
+    <script type="text/babel" src="app.js"></script>
   </body>
 </html>
